# 3DEngine

./: CMakeLists.txt  README.md
CommitLogs/: Commit_3.md  Commit_4.md  Commit_5.md  Commit_6.md  Commit_Template.md
CommitLogs/2026/April/: April_30.md
CommitLogs/2026/February/: February_16.md  February_17.md
CommitLogs/2026/March/: March_22.md  March_5.md  March_8.md
CommitLogs/2026/May/: May_2.md  May_6.md
CommitLogs/March/: March_15th_2026.md
Meshes/: suzanneTriangulated3.mtl  teapotTriangulatedUVMapped.mtl
include/: shader.hpp
include/Lights/: AmbientLight.hpp  DirectionalLight.hpp  ILight.hpp  PointLight.hpp
include/Object/: IMaterial.hpp  IMesh.hpp  ObjMesh.hpp  Object.hpp  PBRMaterial.hpp  materialShader.hpp  shader.hpp  textureData.hpp
include/Object/Material/: Material.hpp  shader.hpp  textureData.hpp
include/Object/Mesh/: Mesh.hpp  MeshLoader.hpp
include/Scene/: Camera.hpp  Clock.hpp  IndirectRender.hpp  Scene.hpp
include/fileLoaders/: MeshLoader.hpp
logs/: Commit_1  Commit_2  Commit_Template
shaders/: DiffuseTexturePhongFragmentShader.glsl  PhongVertexShader.glsl  fragShader.glsl  fragment1.glsl  fragment2.glsl  vertex1.glsl  vertexColoursPhongFragmentShader.glsl  vertexShader.glsl
src/: Camera.cpp  Clock.cpp  IndirectRender.cpp  MeshLoader.cpp  ObjMesh.cpp  Object.cpp  PBRMaterial.cpp  PointLight.cpp  main.cpp  materialShader.cpp  shader.cpp  textureData.cpp  triangle.cpp
